--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 :root {
-    --primary-color: #4B6F44; /* Forest Green */
-    --secondary-color: #8B5E3C; /* Rustic Brown */
-    --background-color: #F5F5DC; /* Beige */
-    --accent-color: #C9A66B; /* Muted Gold */
-    --text-color: #333333; /* Dark Grey */
+    --primary-color: #2bff00;
+    /* Forest Green */
+    --secondary-color: #8B5E3C;
+    /* Rustic Brown */
+    --background-color: #C9A66B;
+    /* Beige */
+    --accent-color: #C9A66B;
+    /* Muted Gold */
+    --text-color: #333333;
+    /* Dark Grey */
 }
 
 /* Global Resets */
@@ -12,33 +17,55 @@ div {
     padding: 0;
 }
 
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.centered img {
+    height: 60px;
+    /* Adjust the size as needed */
+}
+
 body {
+    text-align: center;
     background-color: var(--background-color);
     font-family: Arial, sans-serif;
     line-height: 1.6;
 
 }
 
-.mt-10 { margin-top: 10px; }
-.text-center { text-align: center; }
+.mt-10 {
+    margin-top: 10px;
+}
+
+.text-center {
+    text-align: center;
+}
 
 /* Scrollbar Styles */
 ::-webkit-scrollbar {
     width: 10px;
 }
+
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
+
 ::-webkit-scrollbar-thumb {
     background: #888;
 }
+
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
 
 /* Basic Page Styles */
 html {
-    scroll-behavior: smooth; /* Enables smooth scrolling */
+    scroll-behavior: smooth;
+    /* Enables smooth scrolling */
 }
 
 /* Main Content Container */
@@ -83,6 +110,7 @@ a:focus {
     line-height: 1.3;
     letter-spacing: 0.02em;
 }
+
 .ns-uherh-e-2 {
     line-height: 1.3;
     box-sizing: border-box;
@@ -91,6 +119,7 @@ a:focus {
     justify-content: center;
     flex-grow: 1;
 }
+
 .ns-uherh-e-1 {
     line-height: 1.3;
     box-sizing: border-box;
@@ -100,6 +129,7 @@ a:focus {
     flex-grow: 1;
     width: 100%;
 }
+
 .ns-uherh-e-0 {
     line-height: 1.3;
     border-color: #e6e7e8;
@@ -133,7 +163,8 @@ a:focus {
 /* Add styles for the footer and its content below */
 /* Footer Styles */
 footer {
-    background-color: #D3B899; /* Lighter Brown */
+    background-color: #D3B899;
+    /* Lighter Brown */
     color: var(--text-color);
     text-align: center;
     padding: 20px 0;
@@ -150,10 +181,12 @@ footer {
 .footer-section h4 {
     font-size: 1.2em;
     margin-bottom: 10px;
-    color: var(--accent-color); /* Muted Gold for headers */
+    color: var(--accent-color);
+    /* Muted Gold for headers */
 }
 
-.footer-section p, .footer-section a {
+.footer-section p,
+.footer-section a {
     font-size: 0.9em;
     line-height: 1.6;
     color: #333;
@@ -169,5 +202,6 @@ footer {
     .main-container {
         padding: 0 10px;
     }
+
     /* Other responsive styles */
 }
