--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #f7f9f6;
     /* Olive Green: Good for highlights and CTAs */
-    --secondary-color: #f6f4f2;
+    --secondary-color: #9A8C98;
     /* Earthy Brown: Ideal for headings or important text */
     --background-color: #FAF3DD;
     /* Off-white: Light and clean background color */
